--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,8 @@ cache:
 before_script:
   - ruby -v                                   # Print out ruby version for debugging
   - apt-get update -q && apt-get install nodejs -yqq
-  - gem install bundler  --no-ri --no-rdoc    # Bundler is not installed with the image
+  - gem install bundler --no-ri --no-rdoc     # Bundler is not installed with the image
+  - gem install rake                          # Error thrower...
   - bundle install -j $(nproc) --path vendor  # Install dependencies into ./vendor/ruby
 
 rspec:
