Let's what will happen CI test.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,9 +4,9 @@
 image: "ruby:2.3"
 
 # Cache gems in between builds
-cache:
-  paths:
-    - vendor/ruby
+# cache:
+#   paths:
+#     - vendor/ruby
 
 before_script:
   - ruby -v                                   # Print out ruby version for debugging
