--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,8 @@
 
 # Ignore bundler config.
 /.bundle
-/vendor
-
-# Ignore the default SQLite database.
-/db/*.sqlite3
-/db/*.sqlite3-journal
+/vendor/*
+!/vendor/.keep
 
 # Ignore all logfiles and tempfiles.
 /log/*
