--- a/config/database.yml
+++ b/config/database.yml
@@ -29,7 +29,7 @@ default: &default
 
 development:
   <<: *default
-  database: redirectails_dev
+  database: redirectails_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
