--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,16 @@
 # https://hub.docker.com/r/library/ruby/tags/
 image: "ruby:2.3"
 
+service:
+- postgres:alpine
+
+variables:
+  POSTGRES_USER: "redirectails"
+  POSTGRESS_PASSWORD: "secretpassw0rd"
+  POSTGRESS_DATABASE: "redirectails_development"
+  RAILS_ENV: "test"
+  DATABASE_URL: "postgres://redirectails:secretpassw0rd@postgres:5432/"
+
 # Cache gems in between builds
 cache:
   paths:
@@ -12,7 +22,6 @@ before_script:
   - ruby -v                                   # Print out ruby version for debugging
   - apt-get update -q && apt-get install nodejs ruby-dev -yqq
   - gem install bundler --no-ri --no-rdoc     # Bundler is not installed with the image
-  - gem install rake                          # Error thrower...
   - bundle install -j $(nproc) --path vendor  # Install dependencies into ./vendor/ruby
 
 stages:
