--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,8 @@ before_script:
   - ruby -v                                   # Print out ruby version for debugging
   - apt-get update -q && apt-get install nodejs ruby-dev -yqq
   - gem install bundler --no-ri --no-rdoc     # Bundler is not installed with the image
-  - bundle update -j $(nproc) --path vendor  # Install dependencies into ./vendor/ruby
+  - bundle install -j $(nproc) --path vendor  # Install dependencies into ./vendor/ruby
+  - bundle update                             # Update dependencies for see new version
 
 stages:
   - test
