--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,3 @@
-# This file is a template, and might need editing before it works on your project.
-# Official language image. Look for the different tagged releases at:
-# https://hub.docker.com/r/library/ruby/tags/
-image: "ruby:2.3"
 
 services:
 - postgres:alpine
@@ -13,28 +9,31 @@ variables:
   RAILS_ENV: "test"
   DATABASE_URL: "postgres://redirectails:secretpassw0rd@postgres:5432/"
 
-# Cache gems in between builds
-cache:
-  paths:
-    - vendor/ruby
-
 before_script:
-  - ruby -v                                   # Print out ruby version for debugging
-  - apt-get update -q && apt-get install nodejs ruby-dev -yqq
-  - gem install bundler --no-ri --no-rdoc     # Bundler is not installed with the image
-  - bundle install -j $(nproc)                # Install dependencies into usr/local/lib
-  - bundle update                             # Update dependencies for see new version
+- ruby -v                                   # Print out ruby version for debugging
+- apt-get update -q && apt-get install nodejs ruby-dev -yqq
+- gem install bundler --no-ri --no-rdoc     # Bundler is not installed with the image
+- bundle install -j $(nproc)                # Install dependencies into usr/local/lib
+- bundle update                             # Update dependencies for see new version
+- rails db:setup                            # Run db:create db:migrate db:seed
 
 stages:
-  - test
+- test
 
-rspec:
+rspec:2.3:
+  image: "ruby:2.3"
   stage: test
   script:
   - rspec spec
 
-rails:
+rspec:2.4:
+  image: "ruby:2.4"
   stage: test
   script:
-  - rails db:setup
-  - rails test
+  - rspec spec
+
+rspec:2.5:
+  image: "ruby:2.5"
+  stage: test
+  script:
+  - rspec spec
