--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,8 @@ variables:
   POSTGRESS_DATABASE: "redirectails_development"
   RAILS_ENV: "test"
   DATABASE_URL: "postgres://redirectails:secretpassw0rd@postgres:5432/"
+  NAME: 'Admin'
+  PASSWORD: 'secretpassw0rd'
 
 before_script:
 - ruby -v                                   # Print out ruby version for debugging
