--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,10 @@ language: ruby
 rvm:
   - 2.3
 
+services:
+  - postgresql
+
 addons:
-  postgresql: "10"
-  apt:
-    packages:
-      - postgresql-10
-      - postgresql-client-10
   hosts:
     - redirectails.dev
 
