Added redis for ActionCable

--- a/app.json
+++ b/app.json
@@ -20,5 +20,5 @@
     "scripts": {
         "postdeploy": "bundle exec rails db:migrate db:seed"
     },
-    "addons": ["heroku-postgresql"]
+    "addons": ["heroku-postgresql", "heroku-redis"]
 }
