--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 RAILS_ENV="development"
 DATABASE_URL="postgres://redirectails:secretpassw0rd@localhost:5432"
+SECRET_KEY_BASE="run `rails secret`"
+  
