--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,4 +1,3 @@
-
 Rails:
   Enabled: true
 
@@ -7,16 +6,10 @@ Layout/EndOfLine:
 
 AllCops:
   Exclude:
-    - bin/*
-    - config/*
-    - config/*/*
-    - db/schema.rb
-    - db/*/*
-    - db/schema.rb
-    - config/environments/production.rb
-    - config/application.rb
-    - config/puma.rb
-    - spec/spec_helper.rb
+  - bin/**/*
+  - db/schema.rb
+  - vendor/**/*
+
 
 Documentation:
   Enabled: false
